--- a/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_CircleDetection.ipynb
+++ b/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_CircleDetection.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv.imread('smarties.png')\n",
+    "img = cv.imread('Smarties.jpg')\n",
     "output = img.copy()\n",
     "\n",
     "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
@@ -56,6 +56,13 @@
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -74,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
