--- a/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_Contour.ipynb
+++ b/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_Contour.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of contours = 9\n",
+      "[[[158 637]]\n",
+      "\n",
+      " [[157 638]]\n",
+      "\n",
+      " [[156 638]]\n",
+      "\n",
+      " [[155 638]]\n",
+      "\n",
+      " [[154 638]]\n",
+      "\n",
+      " [[153 638]]\n",
+      "\n",
+      " [[152 638]]\n",
+      "\n",
+      " [[151 639]]\n",
+      "\n",
+      " [[150 639]]\n",
+      "\n",
+      " [[149 640]]\n",
+      "\n",
+      " [[148 640]]\n",
+      "\n",
+      " [[147 641]]\n",
+      "\n",
+      " [[147 642]]\n",
+      "\n",
+      " [[146 643]]\n",
+      "\n",
+      " [[146 644]]\n",
+      "\n",
+      " [[145 645]]\n",
+      "\n",
+      " [[145 646]]\n",
+      "\n",
+      " [[145 647]]\n",
+      "\n",
+      " [[145 648]]\n",
+      "\n",
+      " [[144 649]]\n",
+      "\n",
+      " [[144 650]]\n",
+      "\n",
+      " [[144 651]]\n",
+      "\n",
+      " [[144 652]]\n",
+      "\n",
+      " [[144 653]]\n",
+      "\n",
+      " [[144 654]]\n",
+      "\n",
+      " [[144 655]]\n",
+      "\n",
+      " [[144 656]]\n",
+      "\n",
+      " [[144 657]]\n",
+      "\n",
+      " [[143 658]]\n",
+      "\n",
+      " [[143 659]]\n",
+      "\n",
+      " [[143 660]]\n",
+      "\n",
+      " [[143 661]]\n",
+      "\n",
+      " [[143 662]]\n",
+      "\n",
+      " [[143 663]]\n",
+      "\n",
+      " [[143 664]]\n",
+      "\n",
+      " [[143 665]]\n",
+      "\n",
+      " [[143 666]]\n",
+      "\n",
+      " [[143 667]]\n",
+      "\n",
+      " [[143 668]]\n",
+      "\n",
+      " [[144 669]]\n",
+      "\n",
+      " [[144 670]]\n",
+      "\n",
+      " [[144 671]]\n",
+      "\n",
+      " [[144 672]]\n",
+      "\n",
+      " [[144 673]]\n",
+      "\n",
+      " [[144 674]]\n",
+      "\n",
+      " [[144 675]]\n",
+      "\n",
+      " [[144 676]]\n",
+      "\n",
+      " [[144 677]]\n",
+      "\n",
+      " [[145 678]]\n",
+      "\n",
+      " [[145 679]]\n",
+      "\n",
+      " [[145 680]]\n",
+      "\n",
+      " [[145 681]]\n",
+      "\n",
+      " [[146 682]]\n",
+      "\n",
+      " [[146 683]]\n",
+      "\n",
+      " [[147 684]]\n",
+      "\n",
+      " [[148 685]]\n",
+      "\n",
+      " [[149 686]]\n",
+      "\n",
+      " [[150 687]]\n",
+      "\n",
+      " [[151 687]]\n",
+      "\n",
+      " [[152 687]]\n",
+      "\n",
+      " [[153 688]]\n",
+      "\n",
+      " [[154 688]]\n",
+      "\n",
+      " [[155 688]]\n",
+      "\n",
+      " [[156 688]]\n",
+      "\n",
+      " [[157 688]]\n",
+      "\n",
+      " [[158 689]]\n",
+      "\n",
+      " [[159 689]]\n",
+      "\n",
+      " [[160 689]]\n",
+      "\n",
+      " [[161 689]]\n",
+      "\n",
+      " [[162 689]]\n",
+      "\n",
+      " [[163 689]]\n",
+      "\n",
+      " [[164 689]]\n",
+      "\n",
+      " [[165 688]]\n",
+      "\n",
+      " [[166 688]]\n",
+      "\n",
+      " [[167 688]]\n",
+      "\n",
+      " [[168 688]]\n",
+      "\n",
+      " [[169 688]]\n",
+      "\n",
+      " [[170 688]]\n",
+      "\n",
+      " [[171 687]]\n",
+      "\n",
+      " [[172 687]]\n",
+      "\n",
+      " [[173 686]]\n",
+      "\n",
+      " [[174 686]]\n",
+      "\n",
+      " [[175 685]]\n",
+      "\n",
+      " [[175 684]]\n",
+      "\n",
+      " [[176 683]]\n",
+      "\n",
+      " [[176 682]]\n",
+      "\n",
+      " [[177 681]]\n",
+      "\n",
+      " [[177 680]]\n",
+      "\n",
+      " [[177 679]]\n",
+      "\n",
+      " [[178 678]]\n",
+      "\n",
+      " [[178 677]]\n",
+      "\n",
+      " [[178 676]]\n",
+      "\n",
+      " [[178 675]]\n",
+      "\n",
+      " [[178 674]]\n",
+      "\n",
+      " [[178 673]]\n",
+      "\n",
+      " [[178 672]]\n",
+      "\n",
+      " [[178 671]]\n",
+      "\n",
+      " [[178 670]]\n",
+      "\n",
+      " [[178 669]]\n",
+      "\n",
+      " [[179 668]]\n",
+      "\n",
+      " [[179 667]]\n",
+      "\n",
+      " [[179 666]]\n",
+      "\n",
+      " [[179 665]]\n",
+      "\n",
+      " [[179 664]]\n",
+      "\n",
+      " [[179 663]]\n",
+      "\n",
+      " [[179 662]]\n",
+      "\n",
+      " [[179 661]]\n",
+      "\n",
+      " [[179 660]]\n",
+      "\n",
+      " [[179 659]]\n",
+      "\n",
+      " [[179 658]]\n",
+      "\n",
+      " [[178 657]]\n",
+      "\n",
+      " [[178 656]]\n",
+      "\n",
+      " [[178 655]]\n",
+      "\n",
+      " [[178 654]]\n",
+      "\n",
+      " [[178 653]]\n",
+      "\n",
+      " [[178 652]]\n",
+      "\n",
+      " [[178 651]]\n",
+      "\n",
+      " [[178 650]]\n",
+      "\n",
+      " [[178 649]]\n",
+      "\n",
+      " [[178 648]]\n",
+      "\n",
+      " [[177 647]]\n",
+      "\n",
+      " [[177 646]]\n",
+      "\n",
+      " [[177 645]]\n",
+      "\n",
+      " [[176 644]]\n",
+      "\n",
+      " [[176 643]]\n",
+      "\n",
+      " [[175 642]]\n",
+      "\n",
+      " [[175 641]]\n",
+      "\n",
+      " [[174 640]]\n",
+      "\n",
+      " [[173 640]]\n",
+      "\n",
+      " [[172 639]]\n",
+      "\n",
+      " [[171 639]]\n",
+      "\n",
+      " [[170 639]]\n",
+      "\n",
+      " [[169 638]]\n",
+      "\n",
+      " [[168 638]]\n",
+      "\n",
+      " [[167 638]]\n",
+      "\n",
+      " [[166 638]]\n",
+      "\n",
+      " [[165 638]]\n",
+      "\n",
+      " [[164 637]]\n",
+      "\n",
+      " [[163 637]]\n",
+      "\n",
+      " [[162 637]]\n",
+      "\n",
+      " [[161 637]]\n",
+      "\n",
+      " [[160 637]]\n",
+      "\n",
+      " [[159 637]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "img = cv2.imread('F:/opencv-logo.png')\n",
+    "img = cv2.imread('opencv-logo.png')\n",
     "imgray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "ret, thresh = cv2.threshold(imgray, 127, 255, 0)\n",
@@ -84,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
