--- a/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_HarrisCorner.ipynb
+++ b/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_HarrisCorner.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv.imread('chessboard_img.png')\n",
+    "img = cv.imread('chess-board.png')\n",
     "\n",
     "cv.imshow('img', img)\n",
     "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
@@ -50,9 +50,16 @@
     "\n",
     "cv.imshow('dst', img)\n",
     "\n",
-    "if cv.waitKey(0) & 0xff == 27:\n",
-    "    cv.destroyAllWindows()"
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -71,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
