--- a/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_ShiTomasi.ipynb
+++ b/Adhisha_Gupta/OpenCV_Tutorial/OpenCV_Edge_Contour_Shape_Corner/OpenCv_ShiTomasi.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv.imread('pic1.png')\n",
+    "img = cv.imread('shapes1.jpg')\n",
     "\n",
     "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
     "\n",
@@ -41,9 +41,16 @@
     "\n",
     "cv.imshow('Shi-Tomasi Corner Detector', img)\n",
     "\n",
-    "if cv.waitKey(0) & 0xff == 27:\n",
-    "    cv.destroyAllWindows()"
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -62,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
